--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,68 @@
+body {
+  background-color: #1f2124;
+  color: #ffffff;
+  font-family: "Open Sans", Arial, sans-serif;
+}
+
+#movies-index {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: -10px;
+}
+
+.movie-card {
+  display: flex;
+  flex-direction: column;
+  align-items: justify;
+  text-align: center;
+  margin-bottom: auto;
+  margin-right: 20px;
+  width: 275px;
+  margin: 10px;
+}
+
+.card {
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  background-color: #2e3237;
+}
+
+.card-img-top {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  border-radius: 5px 5px 0 0;
+}
+
+.card-body {
+  padding: 5px;
+}
+
+.card-title {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 0px;
+  text-shadow: 2px 2px 0px rgba(255, 255, 255, 0.45); /* Updated text shadow */
+  border-bottom: 2px solid lightgray;
+  padding-bottom: 15px;
+
+}
+
+.card-text {
+  font-size: 20px;
+}
+
+.card-footer {
+  padding: 5px;
+  background-color: rgb(10, 10, 10);
+  padding-bottom: 10px;
+}
+
+.text-muted {
+  font-size: 15px;
+}
+
 html {
   scroll-behavior: smooth;
 }
