changed around for bootstrap, api works doe

--- a/src/MoviesIndex.css
+++ b/src/MoviesIndex.css
@@ -1,8 +1,11 @@
-#movies-index {
+/* #movies-index {
+  font-family: "Open Sans", Arial, sans-serif;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   width: fit-content;
+  color: #ffffff;
+  background-color: #1f2124;
 }
 
 .card {
@@ -23,3 +26,20 @@
   width: 100%;
   height: auto;
 }
+
+.btn-primary {
+  background-color: #6c757d;
+  border: solid;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn-primary:hover {
+  background-color: #555e66;
+} */
