--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,80 +1,29 @@
-.modal {
+.modal-background {
+  display: block;
   position: fixed;
-  z-index: 9999;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.6);
 }
 
-.modal-dialog {
-  width: 40vh;
-  background-color: #2e3237;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-.modal-content {
-  padding: 20px;
-}
-
-.modal-image {
-  max-width: 100%;
+.modal-main {
+  position: fixed;
+  background: white;
+  width: 80%;
   height: auto;
-  display: block;
-  margin-bottom: 20px;
-  border-radius: 5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1em;
 }
 
-.modal-header {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 10px;
-}
-
-.modal-title {
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 10px;
-  margin: 0;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  text-align-last: center;
-  justify-content: center;
-}
-
-.modal-footer {
-  display: flex;
-  justify-content: center;
-  padding-top: 10px;
-}
-
-.modal-category {
-  text-align: center;
-  padding: 5px;
-  background-color: rgb(10, 10, 10);
-  padding-bottom: 10px;
-  color: white;
-}
-
-.btn-primary {
-  background-color: #6c757d;
-  border: solid;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.btn-primary:hover {
-  background-color: #555e66;
+.modal-main button.close {
+  font-size: 2em;
+  background: none;
+  border: none;
+  position: absolute;
+  top: 0em;
+  right: 0.2em;
 }
