--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,3 +1,4 @@
+
 .modal-background {
   display: block;
   position: fixed;
@@ -5,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.888);
 }
 
 .modal-main {
@@ -19,11 +20,15 @@
   padding: 1em;
 }
 
-.modal-main button.close {
-  font-size: 2em;
-  background: none;
-  border: none;
-  position: absolute;
-  top: 0em;
-  right: 0.2em;
+.modal-body {
+  text-align: center;
 }
+
+.modal-body img {
+  max-width: 50%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border: 2px solid #ffffff;
+}
+
